examples/test/testpolicy17089.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17089
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key16: value45
      key8: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value7
          key49: value34
          key40: value36
      podSelector:
        matchLabels:
          key29: value21
          key44: value40
          key33: value22
